--- a/ProyectoBecaTechCh/style.css
+++ b/ProyectoBecaTechCh/style.css
@@ -44,6 +44,7 @@ header {
 
 }
 
+
 span {
     color: brown;
 }
@@ -85,11 +86,13 @@ button:hover {
     box-sizing: border-box;
     padding: 20px;
     margin-bottom: 15px;
+    margin-right: 5px;
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
     text-align: center;
     justify-content: center;
+    max-width:300px;
 }
 
 .formularios {
@@ -123,10 +126,10 @@ button:hover {
 
 /* Estilos adicionales para mejor presentación */
 .contenedor-principal {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;    
 }
 
 .dato-mascota h3 {
@@ -171,7 +174,7 @@ button:hover {
     color: #ddd;
     height: 50px;
     width: 200px;
-    top: 0px;
+    bottom: 0px;
     right: 0px;
     border-radius: 5px;
 }
@@ -186,3 +189,31 @@ button:hover {
     border-radius: 5px;
 }
 
+#navegador{
+    display: flex;
+    justify-content: space-between;
+}
+
+header{
+    position: sticky;
+}
+
+section .contenedor-principal{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#navegador img{
+    display: block;
+    width: 300px;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 20%; 
+}
+
+#contacto form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
