--- a/ProyectoBecaTechCh/style.css
+++ b/ProyectoBecaTechCh/style.css
@@ -38,7 +38,20 @@ nav ul li {
 
 #inicio {
     background: rgb(195, 222, 211);
-    border-radius: 20px;;
+    border-radius: 20px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-top: 10px;
+}
+
+#inicio h2 {
+    margin: 0px;
+    padding: 3px;
+}
+
+#inicio p {
+    margin: 0px;
+    padding: 3px;
 }
 
 
@@ -114,7 +127,6 @@ button:hover {
 }
 
 .div-generico img {
-    /* display: block; */
     margin-top: 10px;
     border-radius: 5px;
 
@@ -139,7 +151,6 @@ button:hover {
 }
 
 .dato-mascota img {
-    /* display: block; */
     margin-top: 10px;
     border-radius: 5px;
 
@@ -165,12 +176,17 @@ button:hover {
     padding: 10px 20px;
 }
 .fixed {
+    box-sizing: border-box;
+    padding-right: 5px;
+    padding-left: 5px;
+
+    display: flex;
+    flex-wrap: wrap;
     position: fixed;
     background-color: #32936f;
     color: #ddd;
-    height: 50px;
-    width: 200px;
-    bottom: 82px;
+
+    bottom: 100px;
     right: 0px;
     border-radius: 5px;
 }
@@ -187,9 +203,7 @@ button:hover {
 
 
 
-header{
-    position: sticky;
-}
+
 
 section .contenedor-principal{
     display: flex;
@@ -346,5 +360,93 @@ header{
 
 a{
     text-decoration: none;
+
+}
+
+
+
+/* Media queries para diseño responsivo  */
+
+@media (max-width: 600px) {
+
+  body {
+
+    font-size: 16px; 
+    text-align: center;
+
+
+    /* Header y navbar */
+  }
+  header {
+    width: 100%;
+    position: static;
+  }
+
+  .navbar {
+
+    flex-direction: column; 
+    align-items: center;
+
+    align-items: center;
+    width: 100%;
+    font-size: 20px; 
+
+  }
+
+  .nav-links {
+
+    flex-direction: column; /* Apilamos los enlaces verticalmente */
+
+    gap: 10px; /* Espacio entre los enlaces */
+
+  }
+
+header > h1 {
+    display:none;
+}
+  
+/* Body  */
+.fixed {
+    max-width: 150px;
+}
+
+
+
+.dato-mascota{
+    
+    width: 90%;
+    
+}
+}
+
+@media (min-width: 600px) and (max-width: 1024px) {
+
+  body {
+
+    font-size: 18px; /* Tamaño de fuente un poco mayor, adaptado a pantallas medianas */
+
+  }
+
+  .navbar {
+
+    flex-direction: row; /* Volvemos la navegación a horizontal */
+
+    justify-content: space-around;
+
+  }
+
+  .sidebar {
+
+    display: block; /* Mostramos la barra lateral, pero la mantenemos accesoria */
+
+    width: 30%;
+
+  }
+
+  .main-content {
+
+    width: 70%; /* Ajustamos el ancho del contenido principal */
+
+  }
 
 }
